[package]
name = "rustic-memory-store"
version = "0.1.0"
authors = ["Max Jöhnk <maxjoehnk@gmail.com>"]
license = "GPL-3.0"
readme = "README.md"
repository = "https://github.com/rustic-music-player/rustic"
homepage = "https://github.com/rustic-music-player/rustic"
edition = "2018"

[dependencies]
failure = "0.1"
log = "0.4"
pinboard = "2"
serde = "1"
serde_json = "1"
tokio = { version = "0.2", features = ["rt-core", "fs", "io-util"] }

[dependencies.rustic-core]
path = "../../core"

[dependencies.rustic-store-helpers]
path = "../helpers"
