[package]
name = "rustic-sled-store"
version = "0.1.0"
authors = ["Max Jöhnk <maxjoehnk@gmail.com>"]
license = "GPL-3.0"
readme = "README.md"
repository = "https://github.com/rustic-music-player/rustic"
homepage = "https://github.com/rustic-music-player/rustic"
edition = "2018"

[dependencies]
failure = "0.1"
sled = "0.34"
bincode = "1.1"
byteorder = "1.3"
futures = "0.3"
serde = "*"
bimap = "0.6"

[dependencies.rustic-core]
path = "../../core"

[dependencies.rustic-store-helpers]
path = "../helpers"
